--- a/bebei-ias-co/ias-co-web/src/main/resources/templates/common/menu.html
+++ b/bebei-ias-co/ias-co-web/src/main/resources/templates/common/menu.html
@@ -67,29 +67,13 @@
         <!-- 菜单 -->
         <ul class="sidebar-nav">
             <li class="sidebar-nav-link">
-                <a href="index.html" class="active">
-                    <i class="am-icon-home sidebar-nav-link-logo"></i> 首页
+                <a href="/list" class="active">
+                    <i class="am-icon-home sidebar-nav-link-logo"></i> 列表
                 </a>
             </li>
             <li class="sidebar-nav-link">
-                <a href="tables.html">
-                    <i class="am-icon-table sidebar-nav-link-logo"></i> 表格
-                </a>
-            </li>
-            <li class="sidebar-nav-link">
-                <a href="calendar.html">
-                    <i class="am-icon-calendar sidebar-nav-link-logo"></i> 日历
-                </a>
-            </li>
-            <li class="sidebar-nav-link">
-                <a href="form.html">
-                    <i class="am-icon-wpforms sidebar-nav-link-logo"></i> 表单
-
-                </a>
-            </li>
-            <li class="sidebar-nav-link">
-                <a href="chart.html">
-                    <i class="am-icon-bar-chart sidebar-nav-link-logo"></i> 图表
+                <a href="/save">
+                    <i class="am-icon-table sidebar-nav-link-logo"></i> 新建
                 </a>
             </li>
         </ul>
