--- a/bebei-ias-co/ias-co-web/src/main/resources/templates/save.html
+++ b/bebei-ias-co/ias-co-web/src/main/resources/templates/save.html
@@ -26,75 +26,87 @@
     <div class="layui-body">
         <div style="padding: 15px;">
 
-            <form class="layui-form">
+            <form class="layui-form" id="companyForm">
                 <div class="layui-form-item">
                     <label class="layui-form-label">公司名称</label>
                     <div class="layui-input-block">
-                        <input type="text" name="title" required  lay-verify="required" placeholder="企业名称" autocomplete="off" class="layui-input">
+                        <input type="text" name="name" required  lay-verify="required" placeholder="企业名称" autocomplete="off" class="layui-input">
                     </div>
                 </div>
 
                 <div class="layui-form-item">
                     <label class="layui-form-label">企业性质</label>
                     <div class="layui-input-block">
-                        <input type="text" name="title" required  lay-verify="required" placeholder="企业性质" autocomplete="off" class="layui-input">
+                        <select name="nature" lay-verify="required">
+                            <option value="">请选择企业性质</option>
+                            <option value="个人">个人</option>
+                            <option value="国有">国有</option>
+                            <option value="股份制">股份制</option>
+                            <option value="外资">外资</option>
+                        </select>
                     </div>
                 </div>
 
                 <div class="layui-form-item">
                     <label class="layui-form-label">法人代表</label>
                     <div class="layui-input-block">
-                        <input type="text" name="title" required  lay-verify="required" placeholder="法人代表" autocomplete="off" class="layui-input">
+                        <input type="text" name="legalPerson" required  lay-verify="required" placeholder="法人代表" autocomplete="off" class="layui-input">
                     </div>
                 </div>
 
                 <div class="layui-form-item">
                     <label class="layui-form-label">营业执照</label>
                     <div class="layui-input-block">
-                        <input type="text" name="title" required  lay-verify="required" placeholder="营业执照" autocomplete="off" class="layui-input">
+                        <input type="text" name="businessLicense" required  lay-verify="required" placeholder="营业执照" autocomplete="off" class="layui-input">
                     </div>
                 </div>
 
                 <div class="layui-form-item">
                     <label class="layui-form-label">联系人</label>
                     <div class="layui-input-block">
-                        <input type="text" name="title" required  lay-verify="required" placeholder="联系人" autocomplete="off" class="layui-input">
+                        <input type="text" name="contact" required  lay-verify="required" placeholder="联系人" autocomplete="off" class="layui-input">
                     </div>
                 </div>
 
                 <div class="layui-form-item">
                     <label class="layui-form-label">联系电话</label>
                     <div class="layui-input-block">
-                        <input type="text" name="title" required  lay-verify="required" placeholder="联系电话" autocomplete="off" class="layui-input">
+                        <input type="text" name="phone" required  lay-verify="required" placeholder="联系电话" autocomplete="off" class="layui-input">
                     </div>
                 </div>
 
                 <div class="layui-form-item">
                     <label class="layui-form-label">区域</label>
                     <div class="layui-input-inline">
-                        <select name="quiz1">
+                        <select name="province">
                             <option value="">请选择省</option>
-                            <option value="浙江" selected="">浙江省</option>
-                            <option value="你的工号">江西省</option>
-                            <option value="你最喜欢的老师">福建省</option>
+                            <option value="河北省">河北省</option>
                         </select>
                     </div>
                     <div class="layui-input-inline">
-                        <select name="quiz2">
+                        <select name="city">
                             <option value="">请选择市</option>
-                            <option value="杭州">杭州</option>
-                            <option value="宁波" disabled="">宁波</option>
-                            <option value="温州">温州</option>
-                            <option value="温州">台州</option>
-                            <option value="温州">绍兴</option>
+                            <option value="唐山市">唐山市</option>
                         </select>
                     </div>
                     <div class="layui-input-inline">
-                        <select name="quiz3">
+                        <select name="district">
                             <option value="">请选择县/区</option>
-                            <option value="西湖区">西湖区</option>
-                            <option value="余杭区">余杭区</option>
-                            <option value="拱墅区">临安市</option>
+                            <option value="路南区">路南区</option>
+                            <option value="路北区">路北区</option>
+                            <option value="古冶区">古冶区</option>
+                            <option value="开平区">开平区</option>
+                            <option value="丰南区">丰南区</option>
+                            <option value="丰润区">丰润区</option>
+                            <option value="曹妃甸区">曹妃甸区</option>
+                            <option value="遵化市">遵化市</option>
+                            <option value="迁安市">迁安市</option>
+                            <option value="遵化市">遵化市</option>
+                            <option value="滦州市">滦州市</option>
+                            <option value="滦南县">滦南县</option>
+                            <option value="乐亭县">乐亭县</option>
+                            <option value="迁西县">迁西县</option>
+                            <option value="玉田县">玉田县</option>
                         </select>
                     </div>
                 </div>
@@ -102,7 +114,7 @@
                 <div class="layui-form-item layui-form-text">
                     <label class="layui-form-label">详细地址</label>
                     <div class="layui-input-block">
-                        <textarea name="desc" placeholder="详细地址" class="layui-textarea"></textarea>
+                        <textarea name="address" placeholder="详细地址" class="layui-textarea"></textarea>
                     </div>
                 </div>
 
@@ -123,48 +135,45 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">企业人数</label>
                     <div class="layui-input-block">
-                        <input type="text" name="title" required  lay-verify="required" placeholder="企业人数" autocomplete="off" class="layui-input">
+                        <input type="text" name="stuffNumber" required  lay-verify="required" placeholder="企业人数" autocomplete="off" class="layui-input">
                     </div>
                 </div>
 
                 <div class="layui-form-item">
                     <label class="layui-form-label">去年产值（万元）</label>
                     <div class="layui-input-block">
-                        <input type="text" name="title" required  lay-verify="required" placeholder="去年产值（万元）" autocomplete="off" class="layui-input">
+                        <input type="text" name="lastYearProductionValue" required  lay-verify="required" placeholder="去年产值（万元）" autocomplete="off" class="layui-input">
                     </div>
                 </div>
 
                 <div class="layui-form-item layui-form-text">
                     <label class="layui-form-label">实验室能力水平</label>
                     <div class="layui-input-block">
-                        <textarea name="desc" placeholder="实验室能力水平" class="layui-textarea"></textarea>
+                        <textarea name="laboratoryLevel" placeholder="实验室能力水平" class="layui-textarea"></textarea>
                     </div>
                 </div>
 
                 <div class="layui-form-item layui-form-text">
                     <label class="layui-form-label">认证情况</label>
                     <div class="layui-input-block">
-                        <textarea name="desc" placeholder="认证情况" class="layui-textarea"></textarea>
+                        <textarea name="authentication" placeholder="认证情况" class="layui-textarea"></textarea>
                     </div>
                 </div>
 
                 <div class="layui-form-item">
                     <label class="layui-form-label">生产许可证</label>
                     <div class="layui-input-block">
-                        <input type="text" name="title" required  lay-verify="required" placeholder="生产许可证" autocomplete="off" class="layui-input">
+                        <input type="text" name="productionLicense" required  lay-verify="required" placeholder="生产许可证" autocomplete="off" class="layui-input">
                     </div>
                 </div>
 
                 <div class="layui-form-item">
                     <label class="layui-form-label">企业状态</label>
                     <div class="layui-input-block">
-                        <select name="city" lay-verify="required">
+                        <select name="status" lay-verify="required">
                             <option value=""></option>
-                            <option value="0">北京</option>
-                            <option value="1">上海</option>
-                            <option value="2">广州</option>
-                            <option value="3">深圳</option>
-                            <option value="4">杭州</option>
+                            <option value="0">正常</option>
+                            <option value="1">关闭</option>
                         </select>
                     </div>
                 </div>
@@ -172,11 +181,11 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">统计年份</label>
                     <div class="layui-input-block">
-                        <input type="text" name="date" id="date" autocomplete="off" class="layui-input" readonly>
+                        <input type="text" name="checkYear" id="date" autocomplete="off" class="layui-input" readonly>
                     </div>
                 </div>
 
-                <button style="margin-left: 45%; margin-right: 45%" type="submit" class="layui-btn layui-btn-radius">提交</button>
+                <a style="margin-left: 45%; margin-right: 45%" id="submitBtn" class="layui-btn layui-btn-radius">提交</a>
 
             </form>
 
@@ -200,6 +209,7 @@
 </script>
 
 <script src="../assets/layui/layui.all.js"></script>
+<script src="../assets/js/jquery.min.js"></script>
 <script src="../assets/js/save.js"></script>
 </body>
 </html>
