--- a/bebei-ias-co/ias-co-web/src/main/resources/templates/common/top.html
+++ b/bebei-ias-co/ias-co-web/src/main/resources/templates/common/top.html
@@ -3,15 +3,15 @@
     <div class="layui-logo">管理后台</div>
     <!-- 头部区域（可配合layui已有的水平导航） -->
     <ul class="layui-nav layui-layout-left">
-        <li class="layui-nav-item"><a href="">控制台</a></li>
-        <li class="layui-nav-item"><a href="">商品管理</a></li>
-        <li class="layui-nav-item"><a href="">用户</a></li>
+        <!--<li class="layui-nav-item"><a href="">控制台</a></li>-->
+        <!--<li class="layui-nav-item"><a href="">企业管理</a></li>-->
+        <!--<li class="layui-nav-item"><a href="">用户</a></li>-->
     </ul>
     <ul class="layui-nav layui-layout-right">
         <li class="layui-nav-item">
             <a href="javascript:;">
                 <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
-                贤心
+                管理员
             </a>
             <dl class="layui-nav-child">
                 <dd><a href="">基本资料</a></dd>
