--- a/bebei-ias-co/ias-co-web/src/main/resources/templates/detail.html
+++ b/bebei-ias-co/ias-co-web/src/main/resources/templates/detail.html
@@ -6,6 +6,13 @@
     <title>主页</title>
     <link rel="stylesheet" href="../assets/layui/css/layui.css">
 </head>
+
+<style>
+    .layui-table-view .layui-table {
+        width: 100%;
+    }
+</style>
+
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
 
@@ -17,21 +24,144 @@
 
     <!-- 内容主体区域 -->
     <div class="layui-body">
-        <div style="padding: 15px;">内容主体区域</div>
+        <div style="padding: 15px;">
+
+            <div class="layui-form" id="companyForm">
+                <input id="id" th:value="${id}" type="hidden">
+                <div class="layui-form-item">
+                    <label class="layui-form-label">公司名称</label>
+                    <div class="layui-input-block">
+                        <span id="name" class="layui-input"></span>
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">企业性质</label>
+                    <div class="layui-input-block">
+                        <span id="nature" class="layui-input"></span>
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">法人代表</label>
+                    <div class="layui-input-block">
+                        <span id="legalPerson" class="layui-input"></span>
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">营业执照</label>
+                    <div class="layui-input-block">
+                        <span id="businessLicense" class="layui-input"></span>
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">联系人</label>
+                    <div class="layui-input-block">
+                        <span id="contact" class="layui-input"></span>
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">联系电话</label>
+                    <div class="layui-input-block">
+                        <span id="phone" class="layui-input"></span>
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">区域</label>
+                    <div class="layui-input-block">
+                        <span id="area" class="layui-input"></span>
+                    </div>
+                </div>
+
+                <div class="layui-form-item layui-form-text">
+                    <label class="layui-form-label">详细地址</label>
+                    <div class="layui-input-block">
+                        <span id="address" class="layui-input"></span>
+                    </div>
+                </div>
+
+                <div class="layui-form-item layui-form-text">
+                    <label class="layui-form-label">产品及产量</label>
+                    <div class="layui-input-block">
+                        <table id="products" class="layui-hide" lay-filter="products"></table>
+                    </div>
+                </div>
+
+                <div class="layui-form-item layui-form-text">
+                    <label class="layui-form-label">企业设备</label>
+                    <div class="layui-input-block">
+                        <table id="equipments" class="layui-hide" lay-filter="equipments"></table>
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">企业人数</label>
+                    <div class="layui-input-block">
+                        <span id="stuffNumber" class="layui-input"></span>
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">去年产值（万元）</label>
+                    <div class="layui-input-block">
+                        <span id="lastYearProductionValue" class="layui-input"></span>
+                    </div>
+                </div>
+
+                <div class="layui-form-item layui-form-text">
+                    <label class="layui-form-label">实验室能力水平</label>
+                    <div class="layui-input-block">
+                        <span id="laboratoryLevel" class="layui-input"></span>
+                    </div>
+                </div>
+
+                <div class="layui-form-item layui-form-text">
+                    <label class="layui-form-label">认证情况</label>
+                    <div class="layui-input-block">
+                        <span id="authentication" class="layui-input"></span>
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">生产许可证</label>
+                    <div class="layui-input-block">
+                        <span id="productionLicense" class="layui-input"></span>
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">企业状态</label>
+                    <div class="layui-input-block">
+                        <span id="status" class="layui-input"></span>
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">统计年份</label>
+                    <div class="layui-input-block">
+                        <span id="checkYear" class="layui-input"></span>
+                    </div>
+                </div>
+
+                <a th:href="@{'/edit/'+${id}}" style="margin-left: 45%; margin-right: 45%" id="submitBtn" class="layui-btn layui-btn-radius">编辑</a>
+
+            </div>
+
+        </div>
     </div>
 
     <!-- 底部固定区域 -->
     <div class="layui-footer">
-        © lefly.xyz - 底部固定区域
+        © leefly.xyz - 底部固定区域
     </div>
 </div>
-<script src="../assets/layui/layui.all.js"></script>
-<script>
-    //JavaScript代码区域
-    layui.use('element', function () {
-        var element = layui.element;
 
-    });
-</script>
+<script src="../assets/layui/layui.all.js"></script>
+<script src="../assets/js/jquery.min.js"></script>
+<script src="../assets/js/detail.js"></script>
 </body>
 </html>
