--- a/bebei-ias-co/ias-co-web/src/main/resources/templates/list.html
+++ b/bebei-ias-co/ias-co-web/src/main/resources/templates/list.html
@@ -6,6 +6,14 @@
     <title>主页</title>
     <link rel="stylesheet" href="../assets/layui/css/layui.css">
 </head>
+<style>
+    .query-form {
+        float: left;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        width: 23%;
+    }
+</style>
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
 
@@ -17,21 +25,140 @@
 
     <!-- 内容主体区域 -->
     <div class="layui-body">
-        <div style="padding: 15px;">内容主体区域</div>
+        <div style="padding: 15px;">
+            <form class="layui-form" id="queryForm">
+
+                <div class="query-form">
+                    <label class="layui-form-label">公司名称</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="name" placeholder="企业名称" class="layui-input">
+                    </div>
+                </div>
+
+                <div class="query-form">
+                    <label class="layui-form-label">企业性质</label>
+                    <div class="layui-input-inline">
+                        <select name="nature">
+                            <option value="">请选择企业性质</option>
+                            <option value="个人">个人</option>
+                            <option value="国有">国有</option>
+                            <option value="股份制">股份制</option>
+                            <option value="外资">外资</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="query-form">
+                    <label class="layui-form-label">法人代表</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="legalPerson" placeholder="法人代表" class="layui-input">
+                    </div>
+                </div>
+
+                <div class="query-form">
+                    <label class="layui-form-label">营业执照</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="businessLicense" placeholder="营业执照" class="layui-input">
+                    </div>
+                </div>
+
+                <div class="query-form">
+                    <label class="layui-form-label">联系人</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="contact" placeholder="联系人" class="layui-input">
+                    </div>
+                </div>
+
+                <div class="query-form">
+                    <label class="layui-form-label">联系电话</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="phone" placeholder="联系电话" class="layui-input">
+                    </div>
+                </div>
+
+                <div class="query-form">
+                    <label class="layui-form-label">生产许可证</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="productionLicense" placeholder="生产许可证" class="layui-input">
+                    </div>
+                </div>
+
+                <div class="query-form">
+                    <label class="layui-form-label">企业状态</label>
+                    <div class="layui-input-inline">
+                        <select name="status">
+                            <option value=""></option>
+                            <option value="0">正常</option>
+                            <option value="1">停业</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">统计年份</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="checkYear" id="date" class="layui-input" readonly>
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">区域</label>
+                    <div class="layui-input-inline">
+                        <select name="province">
+                            <option value="">请选择省</option>
+                            <option value="河北省">河北省</option>
+                        </select>
+                    </div>
+                    <div class="layui-input-inline">
+                        <select name="city">
+                            <option value="">请选择市</option>
+                            <option value="唐山市">唐山市</option>
+                        </select>
+                    </div>
+                    <div class="layui-input-inline">
+                        <select name="district">
+                            <option value="">请选择县/区</option>
+                            <option value="路南区">路南区</option>
+                            <option value="路北区">路北区</option>
+                            <option value="古冶区">古冶区</option>
+                            <option value="开平区">开平区</option>
+                            <option value="丰南区">丰南区</option>
+                            <option value="丰润区">丰润区</option>
+                            <option value="曹妃甸区">曹妃甸区</option>
+                            <option value="遵化市">遵化市</option>
+                            <option value="迁安市">迁安市</option>
+                            <option value="遵化市">遵化市</option>
+                            <option value="滦州市">滦州市</option>
+                            <option value="滦南县">滦南县</option>
+                            <option value="乐亭县">乐亭县</option>
+                            <option value="迁西县">迁西县</option>
+                            <option value="玉田县">玉田县</option>
+                        </select>
+                    </div>
+                </div>
+
+                <a style="margin-left: 45%;" id="searchBtn" class="layui-btn layui-btn-radius save-btn-class">搜索</a>
+            </form>
+            <div class="layui-form-item">
+                <table class="layui-hide" id="companies" lay-filter="companies"></table>
+            </div>
+        </div>
     </div>
 
     <!-- 底部固定区域 -->
     <div class="layui-footer">
-        © lefly.xyz - 底部固定区域
+        © leefly.xyz - 底部固定区域
     </div>
 </div>
-<script src="../assets/layui/layui.all.js"></script>
-<script>
-    //JavaScript代码区域
-    layui.use('element', function () {
-        var element = layui.element;
 
-    });
+<script type="text/html" id="companyBar">
+    <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="see">查看</a>
+    <a class="layui-btn layui-btn-warm layui-btn-xs" lay-event="edit">编辑</a>
+    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
+
+<script src="../assets/layui/layui.all.js"></script>
+<script src="../assets/js/jquery.min.js"></script>
+<script src="../assets/js/list.js"></script>
 </body>
 </html>
