--- a/bebei-ias-co/ias-co-web/src/main/resources/templates/list.html
+++ b/bebei-ias-co/ias-co-web/src/main/resources/templates/list.html
@@ -84,6 +84,13 @@
                 </div>
 
                 <div class="query-form">
+                    <label class="layui-form-label">企业产品</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="productName" placeholder="企业产品" class="layui-input">
+                    </div>
+                </div>
+
+                <div class="query-form">
                     <label class="layui-form-label">企业状态</label>
                     <div class="layui-input-inline">
                         <select name="status">
